# flower-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
boot/: limine.conf
flower-apps/: Makefile
flower-boot/: initramfs.tar  limine.conf
flower-kernel/: Cargo.toml  Makefile  build.rs  link.ld
flower-kernel/src/: main.rs  user.rs
flower-kernel/src/arch/: apic.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  syscalls.rs
flower-kernel/src/arch/x86_64/: apic.rs  gdt.rs  idt.rs  interrupts.rs  layout.rs  mod.rs
flower-kernel/src/arch/x86_64/acpi/: mod.rs  parser.rs  tables.rs
flower-kernel/src/boot/: mod.rs
flower-kernel/src/drivers/: mod.rs
flower-kernel/src/drivers/pci/: io.rs  mod.rs  parser.rs
flower-kernel/src/drivers/pci/devices/: ac97.rs  mod.rs
flower-kernel/src/drivers/ps2/: keyboard.rs  keyboard_defs.rs  mod.rs
flower-kernel/src/drivers/tty/: flanterm.rs  logging.rs  mod.rs  serial.rs  terminal.rs
flower-kernel/src/system/: mod.rs
flower-kernel/src/system/elf/: mod.rs
flower-kernel/src/system/mem/: heap.rs  mod.rs  pmm.rs  vmm.rs
flower-kernel/src/system/mem/tests/: mod.rs
flower-kernel/src/system/proc/: auxv.rs  execve.rs  exit.rs  fork.rs  mod.rs  process.rs  scheduler.rs  sleep.rs  trampoline.rs  user.rs  wait.rs
flower-kernel/src/system/syscalls/: mod.rs  types.rs
flower-kernel/src/system/syscalls/implementation/: arch.rs  fs.rs  mman.rs  mod.rs  process.rs
flower-kernel/src/system/vfs/: fds.rs  mod.rs  types.rs
flower-kernel/src/system/vfs/devfs/: audio.rs  framebuffer.rs  keyboard.rs  mod.rs  proc.rs
flower-kernel/src/system/vfs/tarfs/: consts.rs  file.rs  mod.rs
flower-libc/: Cargo.toml  Makefile
flower-libc/src/: allocator.rs  auxv.rs  lib.rs  mem.rs  std.rs  syscalls.rs  tty.rs  utils.rs
flower-libc/src/env/: mod.rs
flower-libc/src/file/: mod.rs  sys_file.rs
flower-libc/src/io/: mod.rs
flower-libc/src/process/: mod.rs
flower-libc/src/sys/: mod.rs
flower-libc/src/sys/fs/: mod.rs
flower-libc/src/sys/kernel/: mman.rs  mod.rs  syscalls.rs
flower-libc/src/thread/: mod.rs
flower-mono/: Cargo.toml
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs
kernel/src/arch/: interrupts.rs  syscalls.rs
kernel/src/drivers/tty/: mod.rs
kernel/src/system/: mod.rs
kernel/src/system/elf/: mod.rs
kernel/src/system/mem/tests/: heap.rs
kernel/src/system/vfs/: mod.rs  types.rs
(+62 files in other folders)
