[package]
name = "flower-kernel"
version.workspace = true
edition.workspace = true

[[bin]]
bench = false
name = "flower-kernel"
test = false

[dependencies]
acpi = "6.1.0"
flanterm = "0.0.2"
flower-mono = { path = "../flower-mono" }
limine = "0.5.0"
linked_list_allocator = "0.10.5"
raw-cpuid = "11.6.0"
spin = "0.10.0"
x86_64 = "0.15.4"
