cargo-features = ["panic-immediate-abort"]

[package]
name = "flower-libc"
version.workspace = true
edition.workspace = true

[lib]
bench = false
test = false
crate-type = ["staticlib", "rlib"]

[dependencies]
flower-mono = { path = "../flower-mono" }
linked_list_allocator = "0.10.5"
spin = "0.10.0"
