[[bin]]
name = "flower-kernel"
test = false
bench = false

[package]
name = "flower-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
acpi = "6.1.0"
flanterm = "0.0.2"
limine = "0.5.0"
linked_list_allocator = "0.10.5"
raw-cpuid = "11.6.0"
spin = "0.10.0"
x86_64 = "0.15.4"


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
